# uProbeX

./: CMakeLists.txt  COMPILE.txt  LICENSE  README.md  azure-pipelines.yml  qrc_uProbeX.cpp  setEnv.sh  uProbeX.pri  uProbeX.pro  uProbeX.qrc
.github/workflows/: cmake.yml
cmake/: FindXRF_Maps.cmake  FindZeroMQ.cmake
colormaps/: Inferno.csv  rainbow.csv  rainbow2.csv  rainbow3.csv
docs/: compile.md  faq.md  install_linux.md  roi.md  roi_per_pixel.md  tutorial01.md
flatpak/: gov.anl.aps.uProbeX.yaml  org.UChicagoLLC.ANL.APS.uProbeX.yaml
flatpak/metainfo/: gov.anl.aps.uProbeX.desktop  gov.anl.aps.uProbeX.metainfo.xml
include/core/: AbstractWindowController.h  AbstractWindowModel.h  CAEmitDataChangeHandler.h  RegionCaller.h  SWSModel.h  SWSWidget.h  SubWindow.h  TIFFController.h  TIFFModel.h  TIFFWidget.h  uProbeX.h
include/mvc/: MapsElementsWidget.h  MapsModel.h  MotionNWayWidget.h  SWSModel.h  SolverWidget.h  TIFFController.h  TIFFModel.h
include/preferences/: AttributeGroupModel.h  AttributeTableModel.h  CoordinateTransformGlobals.h  PreferencesDialog.h  PreferencesSolverOption.h  SolverAttributesModel.h  SolverParameterParse.h  SolverTable.h
include/proc/: CircularBuffer.h  ColorLevelsProcessStage.h  ColorSwapProcessStage.h  DisplayStage.h  FinalStage.h  Histogram.h  ProcessStage.h  SourceStage.h  Stage.h  TIFFSourceStage.h  Thread.h
include/solver/: asa047.hpp
py/: customSolver.py  image_seg.py  linear_solver.py  regionActions.py
qss/: dark2.qss
reference/: Scaler_to_PV_map.yaml
src/: main.cpp
src/core/: AbstractWindowController.cpp  AbstractWindowModel.cpp  CAEmitDataChangeHandler.h  ColorMap.cpp  ColorMap.h  CorrelationCoefficient.h  GlobalThreadPool.cpp  GlobalThreadPool.h  PythonLoader.cpp  PythonLoader.h  PythonRegionCaller.cpp  PythonRegionCaller.h  RegionCaller.cpp  RegionCaller.h  SWSModel.cpp  SWSWidget.cpp  ShellRegionCaller.cpp  ShellRegionCaller.h  SubWindow.cpp  SubWindow.h  TIFFController.cpp  TIFFModel.cpp  TIFFWidget.cpp  str_defines.h  uProbeX.cpp  uProbeX.h
src/gstar/: AbstractImageWidget.cpp  AbstractImageWidget.h  AnnotationProperty.cpp  AnnotationProperty.h  AnnotationToolBarWidget.cpp  AnnotationToolBarWidget.h  AnnotationTreeModel.cpp  AnnotationTreeModel.h  Array.cpp  Array.h  CheckBoxDelegate.cpp  CheckBoxDelegate.h  ClickablePixmapItem.h  ClipperItem.cpp  ClipperItem.h  ColorGradientDisplay.cpp  ColorGradientDisplay.h  ColorTransferFunction.cpp  ColorTransferFunction.h  ColorTransferFunctionEditor.cpp  ColorTransferFunctionEditor.h  ContrastDialog.cpp  ContrastDialog.h  ControlPointPicker.cpp  ControlPointPicker.h  ControlPointSlider.cpp  ControlPointSlider.h  ControlPointWidget.cpp  ControlPointWidget.h  ControlPoints.cpp  ControlPoints.h  CoordinateModel.cpp  CoordinateModel.h  CoordinateWidget.cpp  CoordinateWidget.h  CountsLookupTransformer.cpp  CountsLookupTransformer.h  CountsStatsTransformer.cpp  CountsStatsTransformer.h  GStarResource.h  (+34 more)
src/gstar/Annotation/: AbstractGraphicsItem.cpp  AbstractGraphicsItem.h  EmptyGraphicsItem.cpp  EmptyGraphicsItem.h  HotSpotMaskGraphicsItem.cpp  HotSpotMaskGraphicsItem.h  IntensityLineGraphicsItem.cpp  IntensityLineGraphicsItem.h  IntensityPieGraphicsItem.cpp  IntensityPieGraphicsItem.h  LineGraphicsItem.cpp  LineGraphicsItem.h  MarkerGraphicsItem.cpp  (+13 more)
src/mvc/: AbstractWindowController.cpp  AbstractWindowController.h  AbstractWindowModel.cpp  AbstractWindowModel.h  AnnimateSlideWidget.cpp  AnnimateSlideWidget.h  BatchRoiFitWidget.cpp  BatchRoiFitWidget.h  BlueskyComm.h  BlueskyPlan.cpp  BlueskyPlan.h  ChartView.cpp  ChartView.h  CheckBoxDelegate.cpp  CheckBoxDelegate.h  CoLocalizationWidget.cpp  CoLocalizationWidget.h  ComboBoxBoolDelegate.cpp  ComboBoxBoolDelegate.h  ComboBoxDelegate.cpp  ComboBoxDelegate.h  ContrastWidget.cpp  ContrastWidget.h  CustomPeakDialog.cpp  CustomPeakDialog.h  DeselectableTreeView.cpp  DeselectableTreeView.h  ElementInfoDialog.cpp  ElementInfoDialog.h  ElementSelectDialog.cpp  ElementSelectDialog.h  ExportMapsDialog.cpp  ExportMapsDialog.h  FileTabWidget.cpp  FileTabWidget.h  FileTableModel.h  FitElementsTableModel.cpp  FitElementsTableModel.h  FitParamsTableModel.cpp  FitParamsTableModel.h  (+124 more)
src/preferences/: Attribute.cpp  Attribute.h  AttributeGroup.cpp  AttributeGroup.h  AttributeGroupModel.cpp  AttributeGroupModel.h  AttributeTableModel.cpp  AttributeTableModel.h  CoordinateTransformGlobals.cpp  Preferences.cpp  Preferences.h  PreferencesAutoSave.cpp  PreferencesAutoSave.h  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDisplay.cpp  PreferencesDisplay.h  PreferencesExport.cpp  PreferencesExport.h  PreferencesMicroPv.cpp  PreferencesMicroPv.h  PreferencesPythonFunc.cpp  PreferencesPythonFunc.h  PreferencesSolverOption.cpp  PreferencesSolverOption.h  Profile.cpp  Profile.h  ProfileTable.cpp  ProfileTable.h  PythonSolverProfileWidget.cpp  PythonSolverProfileWidget.h  SolverAttributesGroup.cpp  SolverAttributesGroup.h  SolverAttributesModel.cpp  SolverAttributesModel.h  SolverParameterParse.cpp  SolverParameterParse.h  SolverParameterWidget.cpp  SolverParameterWidget.h  SolverTable.cpp  (+1 more)
src/proc/: ColorLevelsProcessStage.cpp  ColorSwapProcessStage.cpp  DisplayStage.cpp  FinalStage.cpp  Histogram.cpp  ProcessStage.cpp  SourceStage.cpp  Stage.cpp  TIFFSourceStage.cpp  Thread.cpp
src/solver/: AbstractSolver.cpp  AbstractSolver.h  CoordinateTransformer.cpp  CoordinateTransformer.h  LinearCoordTransformer.cpp  LinearCoordTransformer.h  LinearSolver.cpp  LinearSolver.h  MappedCoordTransformer.cpp  MappedCoordTransformer.h  NelderMeadSolver.cpp  NelderMeadSolver.h  PythonSolver.cpp  PythonSolver.h  PythonTransformer.cpp  PythonTransformer.h  SV_CoordTransformer.cpp  SV_CoordTransformer.h  Solver.cpp  Solver.h  asa047.cpp
tests/: BlueskyCommMockTest.cpp  BlueskyCommTest.cpp  CMakeLists.txt  README.md
themes/: Catppuccin Frappe (compact).qss  Catppuccin Frappe.qss  Catppuccin Latte (compact).qss  Catppuccin Latte.qss  Catppuccin Macchiato (compact).qss  Catppuccin Macchiato.qss  Catppuccin Mocha (compact).qss  Catppuccin Mocha.qss
